Fixed crash on spectra drawing when Matplotlib 3.0 used.
gui.components.FeedbackThread:
    - introduced queue.Queue as attribute named queue; return value of threaded
      functions is now put in it after thread finishes running
gui.tab_spectra:
    - moved gui elemens manipulation out od FeedbackThread to prevent matplotlib
      crashes spectra drawing
    - calculated spectra is now aquired from .parent.thread.queue to enable
      running .canvas.draw() from main thread
    - (ad. upper) helper methods ._show_spectra() and ._calculate_spectra()
      were introduced
    - changed canvas.show() to canvas.drow(), as newer versions of matplotlib
      require
tesliper:
    - version number changed to 0.7.1

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ skrypty*/
 __*/
 quickcheck*
 tslr_err_log.txt
-ENV/
+ENV*/
 build/
 *.spec
 .idea/
@@ -15,3 +15,4 @@ changes.diff
 message.txt
 icon/
 WinPython/
+tesliper_gui.*
