--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,12 @@ matrix:
       osx_image: xcode9.4  # Python 3.6.5 running on macOS 10.13
       language: shell       # 'language: python' is an error on Travis CI macOS
       before_install:
-        - python3 --version
+        - echo python3 --version
         - pip3 install -U pip
         - pip3 install -U pytest
         - pip3 install python-coveralls
       script:
-        - python -m unittest test
+        - python3 -m unittest test
       after_success:
         - coverage run --source=tesliper --omit=*/gui/* -m unittest test
         - coveralls # submit coverage
@@ -32,12 +32,12 @@ matrix:
       osx_image: xcode10.2  # Python 3.7.3 running on macOS 10.14.3
       language: shell       # 'language: python' is an error on Travis CI macOS
       before_install:
-        - python3 --version
+        - echo python3 --version
         - pip3 install -U pip
         - pip3 install -U pytest
         - pip3 install python-coveralls
       script:
-        - python -m unittest test
+        - python3 -m unittest test
       after_success:
         - coverage run --source=tesliper --omit=*/gui/* -m unittest test
         - coveralls # submit coverage
