--- a/.travis.yml
+++ b/.travis.yml
@@ -47,8 +47,8 @@ matrix:
       language: shell       # 'language: python' is an error on Travis CI Windows
       before_install:
         - choco install python --version 3.6.8
-        - python3 --version
-        - python3 -m pip install --upgrade pip
+        - python --version
+        - python -m pip install --upgrade pip
         - pip3 install --upgrade pytest
         - pip3 install python-coveralls
       env: PATH=/c/Python36:/c/Python36/Scripts:$PATH
