--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,9 @@
 repos:
+-   repo: https://github.com/pycqa/isort
+    rev: 5.8.0
+    hooks:
+    - id: isort
+      args: ["--profile", "black"]
 -   repo: https://github.com/ambv/black
     rev: stable
     hooks:
@@ -8,3 +13,4 @@ repos:
     rev: v2.3.0
     hooks:
     - id: flake8
+
